# stellarium

plugins/TelescopeControl/src/: CMakeLists.txt  TelescopeClient.cpp  TelescopeClient.hpp  TelescopeControl.cpp  TelescopeControl.hpp
plugins/TelescopeControl/src/INDIGO/: CMakeLists.txt  INDIGOConnection.cpp  INDIGOConnection.hpp  INDIGOControlWidget.cpp  INDIGOControlWidget.hpp  INDIGOControlWidget.ui  TelescopeClientINDIGO.cpp  TelescopeClientINDIGO.hpp  TelescopeClientINDIGOWidget.cpp  TelescopeClientINDIGOWidget.hpp  TelescopeClientINDIGOWidget.ui
plugins/TelescopeControl/src/INDIGO/test/: CMakeLists.txt  testINDIGOConnection.cpp  testINDIGOConnection.hpp  testTelescopeClientINDIGO.cpp  testTelescopeClientINDIGO.hpp  testTelescopeControl_INDIGO.cpp  testTelescopeControl_INDIGO.hpp
plugins/TelescopeControl/src/gui/: CMakeLists.txt  TelescopeConfigurationDialog.cpp  TelescopeConfigurationDialog.hpp  TelescopeDialog.cpp  telescopeConfigurationDialog.ui
